die hinzugefügte Events bei dem Buchen wird nun die List angezeigt werden,die von der Host aktiviert wird